fixed some semantic stuff

--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,17 @@ body {
   padding: 20px 10px;
 }
 
-.text h2 {
+.text h1 {
   color: hsl(218, 44%, 22%);
   padding-bottom: 15px;
+  font-size: 1.7rem;
 }
 
 .text p {
   color: hsl(220, 15%, 55%);
+  width: 290px;
+  margin: 0 auto;
+  letter-spacing: 1px;
 }
 
 .attribution {
